--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,24 @@
     {% endfor %}
 </head>
 <body>
+    {% block content %}
+    <div class="role-selection">
+        <div id="teacher-button" class="role-open">
+            <button class="button-anime return-button">button</button>
+            <span>老師</span>
+            <div>
+                <div>
+                    <div>ssss</div>
+                    <div>ssss</div>
+                </div>
+                <div>
+                    <button>ssss</button>
+                    <button>ssss</button>
+                </div>
+            </div>
+        </div>
+        <div id="student-button" class="button-anime">學生</div>
+    </div>
+    {% endblock %}
 </body>
 </html>
