--- a/static/button_animation.css
+++ b/static/button_animation.css
@@ -1,21 +1,4 @@
-body {
-    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
-}
-
-.role-selection {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    align-items: center;
-}
-
-.role-selection > div {
-    margin: 20px;
-    width: 100%;
-}
-
-.role-open {
+.button-anime {
     --border: 5px;    /* the border width */
     --slant: 0.7em;   /* control the slanted corners */
     --color: #37E8FC; /* the color */
@@ -25,6 +8,7 @@ body {
     user-select: none;
     padding: 0.4em 1.2em;
     border: none;
+    cursor: pointer;
     font-weight: bold;
     color: var(--color);
     background: 
@@ -39,13 +23,21 @@ body {
         polygon(0 0, calc(100% - var(--slant)) 0, 100% var(--slant),
                 100% 100%, var(--slant) 100%,0 calc(100% - var(--slant))
             );
-    
-    position: relative;
-    height: 70vh;
+    transition: color var(--t,0.3s), background-size 0.3s;
 }
-
-.return-button {
-    font-size: 20px;
-    position: absolute;
-    left: 1vw;
+.button-anime:focus-visible {
+    outline-offset: calc(-1*var(--border));
+    outline: var(--border) solid #000c;
+    clip-path: none;
+    background-size: 0 0;
+}
+.button-anime:hover,
+.button-anime:active{
+    background-size: 100% 100%;
+    color: #fff;
+    --t: 0.2s 0.1s;
+}
+.button-anime:active {
+    --s: #0005;
+    transition: none;
 }
