--- a/templates/index.html
+++ b/templates/index.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% for file in css_files %}
-        <link rel="stylesheet" href="{{ url_for('static', filename=file) }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/' + file) }}">
     {% endfor %}
     {% for file in js_files %}
-        <script src="{{ url_for('static', filename=file) }}" ></script>
+        <script src="{{ url_for('static', filename='js/' + file) }}" ></script>
     {% endfor %}
 </head>
 <body>
     {% block content %}
     <div class="role-selection">
-        <div id="teacher-button" class="role-open">
-            <button class="button-anime return-button">button</button>
+        <div id="teacher-button" class="button-frame role-open">
+            <button class="button-frame button-anime return-button"><i class="fa-solid fa-arrow-left-long"></i></button>
             <span>老師</span>
-            <div>
+            <div class="input-frame">
                 <div>
-                    <div>ssss</div>
-                    <div>ssss</div>
+                    <input type="text" class="button-frame login-frame" placeholder="username">
+                    <input type="text" class="button-frame login-frame" placeholder="password">
                 </div>
                 <div>
-                    <button>ssss</button>
-                    <button>ssss</button>
+                    <a class="forget-password" href="/">forget password?</a>
+                    <div>
+                        <button class="button-frame button-anime medium-button">register</button>
+                        <button class="button-frame button-anime medium-button">login</button>
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="student-button" class="button-anime">學生</div>
+        <div id="student-button" class="button-frame button-anime"><span>學生</span></div>
     </div>
     {% endblock %}
 </body>
