--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,13 @@
+body > div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .role-selection {
-    width: 30%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -11,11 +19,21 @@
     width: 100%;
 }
 
+#teacher-button.button-anime,
+#student-button.button-anime {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 6vh;
+}
+
 .role-open {
     cursor: default;
     position: relative;
     height: 70vh;
+    transition: height 0.2s ease-in-out;
 }
+
 
 .input-frame {
     height: 90%;
@@ -38,8 +56,9 @@
 }
 
 .login-frame {
-    width: 50%;
-    height: 20%;
+    width: 80%;
+    height: 10%;
+    background-color: transparent;
 }
 
 .forget-password {
