--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,9 +13,6 @@ body {
   overflow: hidden;
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
 }
 
@@ -40,4 +37,12 @@ input:focus {
 
 button {
   cursor: pointer;
+}
+
+header {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 10%;
+  top: 0;
 }
