--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     {% block content %}
-    <div>
+    <div class="center">
         <div class="role-selection">
             <div id="teacher-button" class="button-frame button-anime">
                 <span>老師</span>
