--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -4,15 +4,27 @@
     <input type="checkbox" class="toggler">
     <div class="hamburger"><div></div></div>
     <div class="menu">
-        <div>
-            <ul>
-                <li><a href='#'>Home</a></li>
-                <li><a href='#'>About</a></li>
-                <li><a href='#'>Services</a></li>
-                <li><a href='#'>Contact</a></li>
-            </ul>
+        <div class="non-data"><span>新建課程</span></div>
+    </div>
+    <div class="bg"></div>
+</header>
+<!-- <div class="create-course">
+    <div class="button-frame role-open role-selection">
+        <a href="/teacher"><button class="button-frame button-anime return-button"><i class="fa-solid fa-arrow-left-long"></i></button></a>
+        <span>創建課程</span>
+        <div class="input-frame">
+            <div>
+                <div class="input-box">
+                    <input type="text" class="button-frame login-frame">
+                    <label>create course</label>
+                </div>
+            </div>
+            <div>
+                <div class="register-button-frame">
+                    <button type="button" class="button-frame button-anime">create</button>     
+                </div>
+            </div>
         </div>
     </div>
-</header>
-
+</div> -->
 {% endblock %}
