--- a/static/css/hamburger.css
+++ b/static/css/hamburger.css
@@ -1,6 +1,6 @@
 .toggler{
   /* ALWAYS KEEPING THE TOGGLER OR THE CHECKBOX ON TOP OF EVERYTHING :  */
-    z-index:2;
+    z-index:5;
     height: 50px;
     width: 50px;
     position: absolute;
@@ -12,6 +12,7 @@
 
 .hamburger{
     position: absolute;
+    z-index: 4;
     top: 0;
     left: 0;
     height: 40px;
@@ -82,6 +83,11 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
     background: transparent;
     width: 0%;
     height: 100vh;
+    -webkit-transform: translateX(-200%);
+    -ms-transform: translateX(-200%);
+    transform: translateX(-200%);
+    background-color: #091d387d;
+    z-index: 2;
   
   /* APPLYING TRANSITION TO THE MENU :  */
   
@@ -92,42 +98,66 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
 
 .toggler:checked ~ .menu{
     width: 30%;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
 }
 
 /* STYLING THE LIST :  */
 
-.menu >  div > ul{
+.menu > .non-data {
+    position: absolute;
+    color: white;
+    visibility: hidden;
+    top: 25%;
+    left: 25%;
+    height: 25%;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    position: fixed;
-    top: 70px;
-    padding-left: 10px;
-  
-  /* HIDDEN INITIALLY  :  */
-  
-    visibility: hidden;
+    align-items: center;
+    justify-content: center;
+    border: rgba(58, 172, 221, 0.684) 5px dashed;
+    border-radius: 10px;
+    font-size: large;
+    font-weight: bold;
+    cursor: pointer;
+    user-select: none;
 }
 
-.menu > div > ul > li{
-    list-style: none;
-    padding: 0.5rem;
+.non-data:active {
+    border: rgba(117, 207, 94, 0.684) 5px dashed;
 }
 
-.menu > div > ul > li > a{
-    color: black;
-    text-decoration: none;
-    font-size: 2rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.menu > .non-data > span {
+    position: relative;
+    bottom: 1em;
+    color: rgba(58, 172, 221, 0.684);
 }
 
-/* WHEN THE TOGGLER IS CHECKED, CHANGE THE VISIBILITY TO VISIBLE :  */
+.menu > .non-data::before {
+    content: '+';
+    position: relative;
+    font-size: 8em;
+    color: rgba(53, 91, 202, 0.61);
+}
 
-.toggler:checked ~ .menu > div > ul{
+.toggler:checked ~ .menu > div {
     transition: visibility 0.4s ease;
     transition-delay: 0.1s;
     visibility: visible;
 }
 
-.toggler:checked ~ .menu > div > ul > li > a:hover{
-    color: orange;
+.bg {
+    background: -webkit-gradient(linear,right top,left top,from(rgba(0,23,54,0)),to(#001736));
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    opacity: 0;
+    transition: opacity .3s;
+}
+
+.toggler:checked ~ .bg {
+    opacity: 1;
 }
