--- a/templates/register.html
+++ b/templates/register.html
@@ -17,11 +17,11 @@
                     <label>username</label>
                 </div>
                 <div class="input-box">
-                    <input type="password" class="button-frame login-frame" id="teacher-register-password" required>
+                    <input type="password" class="button-frame login-frame">
                     <label>password</label>
                 </div>
                 <div class="input-box">
-                    <input type="password" class="button-frame login-frame" id="teacher-register-password-confirm" required>
+                    <input type="password" class="button-frame login-frame">
                     <label>confirm password</label>
                 </div>
             </div>
