--- a/templates/register.html
+++ b/templates/register.html
@@ -7,15 +7,15 @@
         <div class="input-frame">
             <div>
                 <div class="input-box">
-                    <input type="text" class="button-frame login-frame">
+                    <input type="text" class="button-frame login-frame" required>
                     <label>username</label>
                 </div>
                 <div class="input-box">
-                    <input type="text" class="button-frame login-frame">
+                    <input type="password" class="button-frame login-frame" required>
                     <label>password</label>
                 </div>
                 <div class="input-box">
-                    <input type="text" class="button-frame login-frame">
+                    <input type="password" class="button-frame login-frame" required>
                     <label>confirm password</label>
                 </div>
             </div>
