--- a/static/css/teacher.css
+++ b/static/css/teacher.css
@@ -9,3 +9,27 @@
     justify-content: center;
 }
 
+.data-frame {
+    width: 100%;
+    height: 90%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+
+.data-input-frame {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+}
+
+.data {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
