--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -1,4 +1,11 @@
 {% extends 'index.html' %}
+{% block preload %}
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+{% endblock %}
+{% block link %}
+
+{% endblock %}
+
 {% block content %}
 <header>
     <input type="checkbox" class="toggler">
@@ -8,6 +15,56 @@
     </div>
     <div class="bg"></div>
 </header>
+
+<div class="data-frame">
+    <div class="data-input-frame">
+        <div id="timeline">
+            <ul id="dates">
+                <li><a href="#step-1">Step.1</a></li>
+                <li><a href="#step-2">Step.2</a></li>
+                <li><a href="#step-3">Step.3</a></li>
+                <li><a href="#step-4">Step.4</a></li>
+                <li><a href="#step-5">Step.5</a></li>
+            </ul>
+            <ul id="issues">
+                <li id="step-1">
+                    <div class="data">
+                        <h1>Step.1</h1>
+                        <p>Upload</p>
+                    </div>
+                </li>
+                <li id="step-2">
+                    <h1>Step.2</h1>
+                    <p>choice voice and image and language</p>
+                </li>
+                <li id="step-3">
+                    <h1>Step.3</h1>
+                    <p>outline selcet</p>
+                </li>
+                <li id="step-4">
+                    <h1>Step.4</h1>
+                    <p>text Adjustment</p>
+                </li>
+                <li id="step-5">
+                    <h1>Step.5</h1>
+                    <p>video genertate</p>
+                </li>
+            </ul>
+            <div class="prev-next">
+                <div class="prev">
+                    <div id="grad_left"></div>
+                    <a href="#" id="prev">-</a>
+                </div>
+                <div class="next">
+                    <div id="grad_right"></div>
+                    <a href="#" id="next">+</a>
+                </div>
+                <!-- <a href="#"><button class=" next"><i class="fa-solid fa-arrow-right"></i></button></a>
+                <a href="#"><button class=" prev"><i class="fa-solid fa-arrow-left"></i></button></a> -->
+            </div>
+        </div>
+    </div>
+</div>
 <!-- <div class="create-course">
     <div class="button-frame role-open role-selection">
         <a href="/teacher"><button class="button-frame button-anime return-button"><i class="fa-solid fa-arrow-left-long"></i></button></a>
@@ -16,7 +73,7 @@
             <div>
                 <div class="input-box">
                     <input type="text" class="button-frame login-frame">
-                    <label>create course</label>
+                    <label>course name</label>
                 </div>
             </div>
             <div>
@@ -27,4 +84,12 @@
         </div>
     </div>
 </div> -->
+
+<script>
+    $(function(){
+    			$().timelinr({
+    				arrowKeys: 'true'
+    			})
+    		});
+  </script>
 {% endblock %}
