--- a/templates/student.html
+++ b/templates/student.html
@@ -12,7 +12,8 @@
     {% endfor %}
 </head>
 <body>
-    <header>
-    </header>
+    <div class="fish" id="fish"></div>
+    <div class="fish" id="fish2"></div>
+
 </body>
 </html>
