--- a/static/css/teach_stepline.css
+++ b/static/css/teach_stepline.css
@@ -75,9 +75,9 @@ h2 {
 }
 
 #issues {
-  width: 800px;
+  /* width: 800px;
   height: 350px;
-  overflow: hidden;
+  overflow: hidden; */
   padding-left: 0;
   margin: 0;
   position: inherit;
@@ -153,32 +153,24 @@ h2 {
 
 #next,
 #prev {
-  /* position: absolute; */
-  /* top: 0; */
-  font-size: 70px;
-  /* top: 170px; */
-  width: 22px;
-  height: 38px;
+  font-size: 50px;
   background-position: 0 0;
   background-repeat: no-repeat;
-  text-indent: -9999px;
   overflow: hidden;
   z-index: 1;
+  transition: transform 0.2s ease-in-out; /* 添加位移效果的过渡 */
 }
 
 #next:hover,
 #prev:hover {
   background-position: 0 -76px;
+  transform: translateY(1px); /* 鼠标悬停时的位移效果 */
 }
 
-#next {
-  right: 0;
-  background: red;
-}
-
-#prev {
-  left: 0;
-  background: blue;
+#next:active,
+#prev:active {
+  background-position: 0 -76px;
+  transform: translateY(10px); /* 鼠标悬停时的位移效果 */
 }
 
 #next.disabled,
