建立輸入資料步驟導引-2

--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -96,7 +96,7 @@
                                     </div>
                                 </label>
                             </div>
-                            <button type="button" class="button-frame button-anime" onclick="createStep()">上傳</button>
+                            <button type="button" class="button-frame button-anime" onclick="createStep(6)">上傳</button>
                             <!-- <div class="data">
                                 <input type="submit" value="上傳">
                             </div> -->
