--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -11,9 +11,13 @@
     <input type="checkbox" class="toggler">
     <div class="hamburger"><div></div></div>
     <div class="menu">
-        <div class="non-data"><span>新建課程</span></div>
+        <div class="non-data">
+            <p>+</p>
+            <p>新建課程</p>
+        </div>
     </div>
     <div class="bg"></div>
+    <div class="mask"></div>
 </header>
 
 <div class="data-frame">
