--- a/static/css/teach_stepline.css
+++ b/static/css/teach_stepline.css
@@ -63,7 +63,8 @@ h2 {
   height: 50px;
   font-size: 24px;
   text-align: center;
-}
+  pointer-events: none;
+} 
 
 #dates a {
   line-height: 38px;
@@ -71,7 +72,7 @@ h2 {
 }
 
 #dates .selected {
-  font-size: 38px;
+  font-size: 34px;
 }
 
 #issues {
@@ -201,3 +202,9 @@ h2 {
 .next {
   justify-content: flex-end;
 }
+
+.enable {
+  pointer-events: all;
+}
+
+
