--- a/static/css/teacher.css
+++ b/static/css/teacher.css
@@ -9,6 +9,19 @@
     justify-content: center;
 }
 
+.toggler:checked ~ .mask {
+  display: block;
+}
+
+.mask {
+  width: 100%;
+  height: 100%;
+  display: none;
+  position: fixed;
+  top: 0;
+  z-index: 3;
+}
+
 .data-frame {
     width: 100%;
     height: 90%;
