--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 <div class="center">
     <div class="button-frame role-open role-selection">
         <a href="/"><button class="button-frame button-anime return-button"><i class="fa-solid fa-arrow-left-long"></i></button></a>
-        <span>教師註冊</span>
+        <span>Teacher Register</span>
         <div class="input-frame">
             <div>
                 <div class="input-box">
