--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -8,12 +8,15 @@
 
 {% block content %}
 <header>
+    <div class="title">
+        <p class="AIGC-title">AIGC Teacher Master</p>
+    </div>
     <input type="checkbox" class="toggler">
     <div class="hamburger"><div></div></div>
     <div class="menu">
         <div class="non-data">
             <p>+</p>
-            <p>新建課程</p>
+            <p>New Course</p>
         </div>
     </div>
     <div class="bg"></div>
@@ -28,24 +31,27 @@
                 <li><a href="#step-2">Step.2</a></li>
                 <li><a href="#step-3">Step.3</a></li>
                 <li><a href="#step-4">Step.4</a></li>
-                <li><a href="#step-5">Step.5</a></li>
+                <!-- <li><a href="#step-5">Step.5</a></li> -->
             </ul>
-            <form method="POST">
+            <form method="POST" name="uploaddata" id="dataForm">
+                <!-- <area value="subject_naem"> -->
                 <ul id="issues">
                     <li id="step-1">
                         <div class="data">
-                            <p>選擇檔案類別及檔案</p>
+                            <p>Select file type and file</p>
                             <select class="sel_box" title="foo" id="setting1" onchange="toggleElements('#setting1')">
-                                <option value=1>選擇檔案</option>
-                                <option value=2>PDF連結</option>
+                                <option value='1'>Choose File</option>
+                                <option value='2'>PDF URL</option>
                             </select>
                             <div class="content_box">
                                 <label for="file_input" class="custom_file_input">
+                                    <i class="fas fa-upload"></i>
                                     <span>Choose file</span>
-                                    <input accept=".pdf,.mp3,.ppt,.pptx" type="file" id="file_input" style="display: none;">
+                                    <span>( pdf  , ppt , pptx )</span>
+                                    <input accept=".pdf,.ppt,.pptx" type="file" id="file_input" name="uploadfile" style="display: none;">
                                 </label>
                             </div>
-                            <div class="content_box url_input_box" style="display: none;">
+                            <div class="content_box url_input_box">
                                 <div class="url_box">
                                     <input type="text" id="url_input" placeholder="Enter URL">
                                 </div>
@@ -54,68 +60,65 @@
                     </li>
                     <li id="step-2">
                         <div class="data">
-                            <p>選擇影片人物</p>
-                            <select name="face_box">
+                            <p>select movie character</p>
+                            <select name="face_box" class="sel_box" id="setting2" onchange="toggleElements('#setting2')">
                                 {% for face in faces %}
                                     <option value="{{ face }}">{{ face }}</option>
                                 {% endfor %}
                             </select>
-                            
+                            {% for face_count in faces%}
+                            <div class="face_img_frame content_box">
+                                <img class="face_img" src="../static/test_img/{{ face_count }}.jpg">
+                            </div>
+                            {% endfor %}
+
                         </div>
                     </li>
                     <li id="step-3">
                         <div class="data">
-                            <p>選擇語言</p>
+                            <p>Select language/voice</p>
                             <select name="language_box">
                                 {% for lang in langs %}
                                     <option value="{{ lang }}">{{ lang }}</option>
                                 {% endfor %}
                                 
                             </select>
-                            <p>選擇語音</p>
-                            <select name="voice_box">
-                                {% for voice in voices %}
-                                    <option value="{{ voice }}">{{ voice }}</option>
-                                {% endfor %}
-                               
-                            </select>
                         </div>
                     </li>
                     <li id="step-4">
                         <div class="data">
-                            <p>選擇生成類別(大綱/詳細講稿)</p>
+                            <p>Select Generation Category (Outline/Draft)</p>
                             <div class="middle">
                                 <label>
                                     <input type="radio" name="radio" checked/>
                                     <div class="outline radio-box">
-                                        <span>大綱</span>
-                                        <p>適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合</p>
+                                        <span>Outline</span>
                                     </div>
                                 </label>
                                 <label>
                                     <input type="radio" name="radio"/>
                                     <div class="speech radio-box">
-                                        <span>詳細講稿</span>
-                                        <p>適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合適合</p>
+                                        <span>Draft</span>
+
                                     </div>
                                 </label>
                             </div>
-                            <button type="button" class="button-frame button-anime" onclick="createStep(6)">上傳</button>
+                            <input type="button" class="button-frame button-anime" onclick="upload(4)" value="upload">
                             <!-- <div class="data">
                                 <input type="submit" value="上傳">
                             </div> -->
                         </div>
                     </li>
-                    <li id="step-5">
+                    <!-- <li id="step-5">
                         <div class="data">
-                            <textarea name="" id="" cols="100" rows="30"></textarea>
+                            <p>generate content</p>
+                            <textarea class="textbox" placeholder="No data has been generated yet"></textarea>
+                            <div class="send">
+                                <input type="submit" value="confirm" class="button-frame button-anime">
+                                <input type="button" value="reset" class="button-frame button-anime">
+                            </div>
                         </div>
-                    </li>
-                    <li id="step-6">
-                        <div class="data">
-                            <textarea name="" id="" cols="100" rows="30"></textarea>
-                        </div>
-                    </li>
+                    </li> -->
                 </ul>
             </form>
             <div class="prev-next">
